# Crazyflie-Gazebo-Simulation

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
CrazyS/rotors_control/include/rotors_control/: attitude_controller.h  position_controller_v2.h
CrazyS/rotors_control/src/nodes/: att_contr.txt  attitude_controller_node.cpp  attitude_controller_node.h  attitude_controller_node_v2.cpp  attitude_controller_node_v2.h  pos_contr.txt  position_controller_node.cpp  position_controller_node_v2.cpp  position_controller_node_v2.h
CrazyS/rotors_gazebo/: CMakeLists.txt
CrazyS/rotors_gazebo/launch/: crazyflie2_hovering_eight.launch  crazyflie2_hovering_eight_odometry.launch  crazyflie2_hovering_example.launch.save.1  crazyflie2_maxi_v2.launch  spawn_mav_crazyflie.launch
CrazyS/rotors_gazebo/resource/: controller_crazyflie2.yaml  controller_crazyflie2_with_stateEstimator.yaml
CrazyS/rotors_gazebo/src/nodes/: hovering_eight.cpp  hovering_eight_odometry.cpp  hovering_eight_v2.cpp
CrazyS/rotors_gazebo/worlds/: basic_crazyflie.world
src/CrazyS/rotors_control/: CMakeLists.txt
src/CrazyS/rotors_control/src/nodes/: att_contr.txt  attitude_controller_node_v2.h  position_controller_node.h  position_controller_node_v2.cpp
src/CrazyS/rotors_gazebo/launch/: crazyflie2_hovering_example.launch  crazyflie2_maxi_v2.launch
src/CrazyS/rotors_gazebo/resource/: controller_crazyflie2.yaml
src/CrazyS/rotors_gazebo/src/nodes/: hovering_example.cpp
